# learning-repo

./: .gitignore  AGENTS.md  README.md  ROOT-PLAN.md
agent-orchestrator/: README.md  migrate_runtime.md  migrate_runtime.ps1  orchestrate.py  pyproject.toml
agent-orchestrator/config/: harnesses.toml  models.toml  profiles.toml  providers.toml
agent-orchestrator/config/deferred/: harnesses-kolibri.toml  models-kolibri.toml  models.toml  profiles-kolibri.toml  profiles.toml  providers-kolibri.toml  providers.toml
agent-orchestrator/examples/: cloud-read-canary.json  gemini-command-canary.json  gemini-file-canary.json  gemini-read-canary.json  graph.json  local-file-canary.json  route-kolibri-simple.json  route-kolibri.json  route-local.json
agent-orchestrator/examples/context/: brief.md
agent-orchestrator/examples/file-canary/: instructions.md
agent-orchestrator/examples/gemini-command-canary/: test_smoke.py
agent-orchestrator/examples/gemini-file-canary/: instructions.md
agent-orchestrator/examples/harnesses/fanout-fanin/: harness.json  left.json  (+1 more)
agent-orchestrator/schemas/: harness.schema.json  job.schema.json
agent-orchestrator/src/agent_orchestrator/: __init__.py  adapters.py  cli.py  contracts.py  harness_contracts.py  harness_runner.py  locking.py  paths.py  registry.py  routing.py  runner.py  runtime.py  scheduler.py  snapshot.py
agent-orchestrator/tests/: helpers.py  test_contracts_paths.py  test_gemini_adapter.py  test_local_chat_adapter.py  test_red_team.py  test_routing.py  test_runner.py  test_scheduler_locking.py  test_vibe_adapter.py
(+851 files in other folders)
