[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-learn-agent-orchestrator"
version = "0.1.0"
description = "Vendor-neutral, auditable model and agent orchestration for AI-Learn"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
model-orchestrator = "agent_orchestrator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

